# biz/router/proxy/proxy.go
@@ -1,0 +1,24 @@
+// Code generated by hertz generator. DO NOT EDIT.
+
+package proxy
+
+import (
+	"github.com/cloudwego/hertz/pkg/app/server"
+	proxy "github.com/li1553770945/openmcp-gateway/biz/handler/proxy"
+)
+
+/*
+ This file will register all the routes of the services in the master idl.
+ And it will update automatically when you use the "update" command for the idl.
+ So don't modify the contents of the file, or your code will be deleted when it is updated.
+*/
+
+// Register register routes based on the IDL 'api.${HTTP Method}' annotation.
+func Register(r *server.Hertz) {
+
+	root := r.Group("/", rootMw()...)
+	{
+		_proxy := root.Group("/proxy", _proxyMw()...)
+		_proxy.Any("/*path", append(_forwardMw(), proxy.Forward)...)
+	}
+}
